--- a/bootstrap/docker-compose.yml
+++ b/bootstrap/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       MINIO_SERVER_ACCESS_KEY: username
       MINIO_SERVER_SECRET_KEY: password
     command: >
-      /bin/sh -c "
+      /bin/bash -c "
         until (mc alias set minio http://minio:9000 username password) do echo '...waiting...' && sleep 1; done;
         mc mb minio/lakehouse/bronze minio/lakehouse/silver minio/lakehouse/gold;
         mc anonymous set public minio/lakehouse;
@@ -55,8 +55,10 @@ services:
     environment:
       AWS_ACCESS_KEY_ID: username
       AWS_SECRET_ACCESS_KEY: password
-    command: |
-      sh /opt/starrocks/fe/bin/start_fe.sh
+    command: >
+      /bin/bash -c "
+        /opt/starrocks/fe/bin/start_fe.sh
+      "
     depends_on: [ minio ]
     healthcheck:
       test: 'mysql -u root -h starrocks-fe -P 9030 -e "SHOW FRONTENDS\G" |grep "Alive: true"'
@@ -76,19 +78,18 @@ services:
     environment:
       AWS_ACCESS_KEY_ID: username
       AWS_SECRET_ACCESS_KEY: password
-    command:
-      - /bin/bash
-      - -c
-      - |
+    command: >
+      /bin/bash -c "
         ulimit -u 65535;
         ulimit -n 65535;
-        echo "# Enable data cache"  >> /opt/starrocks/be/conf/be.conf
-        echo "block_cache_enable = true"  >> /opt/starrocks/be/conf/be.conf
-        echo "block_cache_mem_size = 536870912" >> /opt/starrocks/be/conf/be.conf
-        echo "block_cache_disk_size = 1073741824" >> /opt/starrocks/be/conf/be.conf
-        sleep 15s
-        mysql --connect-timeout 2 -h starrocks-fe -P 9030 -u root -e "ALTER SYSTEM ADD BACKEND \"starrocks-be:9050\";"
+        echo '# Enable data cache'  >> /opt/starrocks/be/conf/be.conf;
+        echo 'block_cache_enable = true'  >> /opt/starrocks/be/conf/be.conf;
+        echo 'block_cache_mem_size = 536870912' >> /opt/starrocks/be/conf/be.conf;
+        echo 'block_cache_disk_size = 1073741824' >> /opt/starrocks/be/conf/be.conf;
+        sleep 15s;
+        mysql --connect-timeout 2 -h starrocks-fe -P 9030 -u root -e 'ALTER SYSTEM ADD BACKEND \"starrocks-be:9050\";';
         /opt/starrocks/be/bin/start_be.sh
+      "
     depends_on: [ minio, starrocks-fe ]
     healthcheck:
       test: 'mysql -u root -h starrocks-fe -P 9030 -e "SHOW BACKENDS\G" |grep "Alive: true"'
@@ -107,11 +108,12 @@ services:
     environment:
       POSTGRESQL_USERNAME: username
       POSTGRESQL_PASSWORD: password
-      POSTGRESQL_DATABASE: hive-metastore
+    volumes:
+      - ./config/postgresql/initdb/:/docker-entrypoint-initdb.d/
 
-  hive-metastore:
+  metastore:
     image: starburstdata/hive:3.1.3-e.9
-    container_name: hive-metastore
+    container_name: metastore
     restart: on-failure
     networks:
       lakehouse-network:
@@ -119,7 +121,7 @@ services:
     hostname: hive-metastore
     environment:
       HIVE_METASTORE_DRIVER: org.postgresql.Driver
-      HIVE_METASTORE_JDBC_URL: jdbc:postgresql://postgresql:5432/hive-metastore
+      HIVE_METASTORE_JDBC_URL: jdbc:postgresql://postgresql:5432/metastore
       HIVE_METASTORE_USER: username
       HIVE_METASTORE_PASSWORD: password
       HIVE_METASTORE_WAREHOUSE_DIR: s3a://lakehouse/silver-layer
@@ -144,13 +146,112 @@ services:
       HIVE_METASTORE_USERS_IN_ADMIN_ROLE: admin
     depends_on: [ minio, postgresql ]
 
+  mysql:
+    image: bitnami/mysql:8.3.0
+    container_name: mysql
+    restart: on-failure
+    networks:
+      lakehouse-network:
+        ipv4_address: 10.1.1.8
+    hostname: mysql
+    environment:
+      MYSQL_USER: username
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: billing
+      MYSQL_EXTRA_FLAGS: >
+        --gtid-mode=ON
+        --enforce_gtid_consistency=ON
+    volumes:
+      - ./config/mysql/initdb/:/docker-entrypoint-initdb.d/
+
+  kafka:
+    image: debezium/kafka:2.5.3.Final
+    container_name: kafka
+    restart: on-failure
+    networks:
+      lakehouse-network:
+        ipv4_address: 10.1.1.9
+    hostname: kafka
+    environment:
+      CLUSTER_ID: 5Yr1SIgYQz-b-dgRabWx4g
+      BROKER_ID: 1
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
+
+  schema-registry:
+    image: confluentinc/cp-schema-registry:7.6.0
+    restart: on-failure
+    container_name: schema-registry
+    networks:
+      lakehouse-network:
+        ipv4_address: 10.1.1.10
+    hostname: schema-registry
+    environment:
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka:9092
+      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
+      SCHEMA_REGISTRY_SCHEMA_COMPATIBILITY_LEVEL: NONE
+    depends_on: [ kafka ]
+
+  debezium:
+    image: debezium/cp-connect:2.5.3.Final
+    build:
+      context: ./images/debezium/2.5
+    container_name: debezium
+    restart: on-failure
+    networks:
+      lakehouse-network:
+        ipv4_address: 10.1.1.11
+    hostname: debezium
+    environment:
+      BOOTSTRAP_SERVERS: kafka:9092
+      GROUP_ID: 1
+      CONFIG_STORAGE_TOPIC: _debezium.configs
+      OFFSET_STORAGE_TOPIC: _debezium.offsets
+      STATUS_STORAGE_TOPIC: _debezium.statuses
+      KEY_CONVERTER: io.confluent.connect.avro.AvroConverter
+      VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
+      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:8081
+      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:8081
+    depends_on: [ kafka, schema-registry ]
+
+  conduktor-platform:
+    image: conduktor/conduktor-platform:1.21.1
+    container_name: conduktor-platform
+    restart: on-failure
+    networks:
+      lakehouse-network:
+        ipv4_address: 10.1.1.12
+    hostname: conduktor-platform
+    volumes:
+      - type: bind
+        source: "./config/conduktor/platform-config.yml"
+        target: /opt/conduktor/platform-config.yml
+        read_only: true
+    environment:
+      CDK_IN_CONF_FILE: /opt/conduktor/platform-config.yml
+    depends_on: [ postgresql, kafka, schema-registry, debezium ]
+
+  conduktor-monitoring:
+    image: conduktor/conduktor-platform-cortex:1.21.1
+    container_name: conduktor-monitoring
+    restart: on-failure
+    networks:
+      lakehouse-network:
+        ipv4_address: 10.1.1.13
+    hostname: conduktor-monitoring
+    environment:
+      CDK_CONSOLE-URL: http://conduktor-platform:8080
+    depends_on: [ conduktor-platform, postgresql ]
+
+
 #  lakefs:
 #    image: treeverse/lakefs:1.14.1
 #    container_name: lakefs
 #    restart: on-failure
 #    networks:
 #      lakehouse-network:
-#        ipv4_address: 10.1.1.8
+#        ipv4_address: 10.1.1.14
 #    environment:
 #      LAKEFS_DATABASE_TYPE: postgres
 #      LAKEFS_DATABASE_POSTGRES_CONNECTION_STRING: postgres://username:password@postgresql:5432/lakefs
