--- a/bootstrap/docker-compose.yml
+++ b/bootstrap/docker-compose.yml
@@ -1,8 +1,6 @@
-version: "3.9"
-
 networks:
-  lakehouse-network:
-    name: lakehouse-network
+  xnetwork:
+    name: xnetwork
     driver: bridge
     ipam:
       driver: default
@@ -16,7 +14,7 @@ services:
     container_name: minio
     restart: on-failure
     networks:
-      lakehouse-network:
+      xnetwork:
         ipv4_address: 10.1.1.2
     hostname: minio
     environment:
@@ -28,7 +26,7 @@ services:
     container_name: minio-client
     restart: on-failure
     networks:
-      lakehouse-network:
+      xnetwork:
         ipv4_address: 10.1.1.3
     hostname: minio-client
     environment:
@@ -44,12 +42,12 @@ services:
     depends_on: [ minio ]
 
   starrocks-fe:
-    image: starrocks/fe-ubuntu:3.2.4
+    image: starrocks/fe-ubuntu:3.3.3
     container_name: starrocks-fe
     user: root
     restart: on-failure
     networks:
-      lakehouse-network:
+      xnetwork:
         ipv4_address: 10.1.1.4
     hostname: starrocks-fe
     environment:
@@ -57,52 +55,52 @@ services:
       AWS_SECRET_ACCESS_KEY: password
     command: >
       /bin/bash -c "
-        /opt/starrocks/fe/bin/start_fe.sh
+        echo run_mode=shared_data >> /opt/starrocks/fe/conf/fe.conf;
+        echo aws_s3_path=starrocks >> /opt/starrocks/fe/conf/fe.conf;
+        echo aws_s3_endpoint=minio:9000 >> /opt/starrocks/fe/conf/fe.conf;
+        echo aws_s3_use_instance_profile=false >> /opt/starrocks/fe/conf/fe.conf;
+        echo cloud_native_storage_type=S3 >> /opt/starrocks/fe/conf/fe.conf;
+        echo aws_s3_use_aws_sdk_default_behavior=true >> /opt/starrocks/fe/conf/fe.conf;
+        /opt/starrocks/fe/bin/start_fe.sh;
       "
     depends_on: [ minio ]
     healthcheck:
-      test: 'mysql -u root -h starrocks-fe -P 9030 -e "SHOW FRONTENDS\G" |grep "Alive: true"'
+      test: 'mysql -u root -h starrocks-fe -P 9030 -e "SHOW FRONTENDS\G" | grep "Alive: true"'
       interval: 10s
       timeout: 5s
       retries: 3
 
-  starrocks-be:
-    image: starrocks/be-ubuntu:3.2.4
-    container_name: starrocks-be
+  starrocks-cn:
+    image: starrocks/cn-ubuntu:3.3.3
+    container_name: starrocks-cn
     user: root
     restart: on-failure
     networks:
-      lakehouse-network:
+      xnetwork:
         ipv4_address: 10.1.1.5
-    hostname: starrocks-be
+    hostname: starrocks-cn
     environment:
       AWS_ACCESS_KEY_ID: username
       AWS_SECRET_ACCESS_KEY: password
     command: >
-      /bin/bash -c "
-        ulimit -u 65535;
-        ulimit -n 65535;
-        echo '# Enable data cache'  >> /opt/starrocks/be/conf/be.conf;
-        echo 'block_cache_enable = true'  >> /opt/starrocks/be/conf/be.conf;
-        echo 'block_cache_mem_size = 536870912' >> /opt/starrocks/be/conf/be.conf;
-        echo 'block_cache_disk_size = 1073741824' >> /opt/starrocks/be/conf/be.conf;
+      /bin/bash -c '
         sleep 15s;
-        mysql --connect-timeout 2 -h starrocks-fe -P 9030 -u root -e 'ALTER SYSTEM ADD BACKEND \"starrocks-be:9050\";';
-        /opt/starrocks/be/bin/start_be.sh
-      "
+        mysql -u root -h starrocks-fe -P 9030 -e "ALTER SYSTEM ADD COMPUTE NODE \"starrocks-cn:9050\";";
+        /opt/starrocks/cn/bin/start_cn.sh
+      '
     depends_on: [ minio, starrocks-fe ]
     healthcheck:
-      test: 'mysql -u root -h starrocks-fe -P 9030 -e "SHOW BACKENDS\G" |grep "Alive: true"'
+      test: 'mysql -u root -h starrocks-fe -P 9030 -e "SHOW COMPUTE NODES\G" | grep "Alive: true"'
       interval: 10s
       timeout: 5s
       retries: 3
 
   postgresql:
-    image: bitnami/postgresql:16.2.0
+    image: bitnami/postgresql:16.4.0
     container_name: postgresql
     restart: on-failure
     networks:
-      lakehouse-network:
+      xnetwork:
         ipv4_address: 10.1.1.6
     hostname: postgresql
     environment:
@@ -112,11 +110,11 @@ services:
       - ./config/postgresql/initdb/:/docker-entrypoint-initdb.d/
 
   metastore:
-    image: starburstdata/hive:3.1.3-e.9
+    image: starburstdata/hive:3.1.3-e.11
     container_name: metastore
     restart: on-failure
     networks:
-      lakehouse-network:
+      xnetwork:
         ipv4_address: 10.1.1.7
     hostname: hive-metastore
     environment:
@@ -151,7 +149,7 @@ services:
     container_name: mysql
     restart: on-failure
     networks:
-      lakehouse-network:
+      xnetwork:
         ipv4_address: 10.1.1.8
     hostname: mysql
     environment:
@@ -164,11 +162,11 @@ services:
       - ./config/mysql/initdb/:/docker-entrypoint-initdb.d/
 
   kafka:
-    image: debezium/kafka:2.5.3.Final
+    image: debezium/kafka:2.7.2.Final
     container_name: kafka
     restart: on-failure
     networks:
-      lakehouse-network:
+      xnetwork:
         ipv4_address: 10.1.1.9
     hostname: kafka
     environment:
@@ -177,11 +175,11 @@ services:
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
 
   schema-registry:
-    image: confluentinc/cp-schema-registry:7.6.0
+    image: confluentinc/cp-schema-registry:7.7.0
     restart: on-failure
     container_name: schema-registry
     networks:
-      lakehouse-network:
+      xnetwork:
         ipv4_address: 10.1.1.10
     hostname: schema-registry
     environment:
@@ -192,13 +190,13 @@ services:
     depends_on: [ kafka ]
 
   debezium:
-    image: debezium/cp-connect:2.5.3.Final
+    image: debezium/cp-connect:2.7.2.Final
     build:
-      context: ./images/debezium/2.5
+      context: ./images/debezium/2.7
     container_name: debezium
     restart: on-failure
     networks:
-      lakehouse-network:
+      xnetwork:
         ipv4_address: 10.1.1.11
     hostname: debezium
     environment:
@@ -214,11 +212,11 @@ services:
     depends_on: [ kafka, schema-registry ]
 
   conduktor-platform:
-    image: conduktor/conduktor-platform:1.21.1
+    image: conduktor/conduktor-platform:1.25.1
     container_name: conduktor-platform
     restart: on-failure
     networks:
-      lakehouse-network:
+      xnetwork:
         ipv4_address: 10.1.1.12
     hostname: conduktor-platform
     volumes:
@@ -231,34 +229,13 @@ services:
     depends_on: [ postgresql, kafka, schema-registry, debezium ]
 
   conduktor-monitoring:
-    image: conduktor/conduktor-platform-cortex:1.21.1
+    image: conduktor/conduktor-platform-cortex:1.25.1
     container_name: conduktor-monitoring
     restart: on-failure
     networks:
-      lakehouse-network:
+      xnetwork:
         ipv4_address: 10.1.1.13
     hostname: conduktor-monitoring
     environment:
       CDK_CONSOLE-URL: http://conduktor-platform:8080
     depends_on: [ conduktor-platform, postgresql ]
-
-
-#  lakefs:
-#    image: treeverse/lakefs:1.14.1
-#    container_name: lakefs
-#    restart: on-failure
-#    networks:
-#      lakehouse-network:
-#        ipv4_address: 10.1.1.14
-#    environment:
-#      LAKEFS_DATABASE_TYPE: postgres
-#      LAKEFS_DATABASE_POSTGRES_CONNECTION_STRING: postgres://username:password@postgresql:5432/lakefs
-#      LAKEFS_AUTH_ENCRYPT_SECRET_KEY: password
-#      LAKEFS_BLOCKSTORE_TYPE: s3
-#      LAKEFS_BLOCKSTORE_S3_FORCE_PATH_STYLE: "true"
-#      LAKEFS_BLOCKSTORE_S3_ENDPOINT: http://minio:9000
-#      LAKEFS_BLOCKSTORE_S3_DISCOVER_BUCKET_REGION: "false"
-#      LAKEFS_BLOCKSTORE_S3_CREDENTIALS_ACCESS_KEY_ID: username
-#      LAKEFS_BLOCKSTORE_S3_CREDENTIALS_SECRET_ACCESS_KEY: password
-#    command: [ "run" ]
-#    depends_on: [ postgresql, minio ]
